<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#f9ca24"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Filters"
            android:textColor="#2B2B2B"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lab_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="CATEGORIES"
                android:textColor="#2E2D2D"
                android:textSize="15sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/FilterRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:layout_marginRight="15dp"
                    android:text="Minimum Hourly Pay:"
                    android:paddingBottom="5dp"
                    android:textColor="#2E2D2D"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/minPayTV"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:inputType="number"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="DISTANCE"
                    android:textColor="#2E2D2D"
                    android:textSize="15sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/distance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:text="0km" />
                </LinearLayout>
                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/err_msg_price"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text=""
                    android:textColor="#F44336" />
            </LinearLayout>


            <TextView
                android:id="@+id/err_msg_duration"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text=""
                android:textColor="#F44336" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ApplyFilter"
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="applyFilterOnButtonClick"
                        android:text="apply" />

                    <Button
                        android:id="@+id/filterCancel"
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="cancel"
                        android:text="Cancel" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>
